# actions

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierignore  AGENTS.md  Dockerfile  README.md  README.zh-CN.md  action.yml  cfg.md  custom_script.py  disk-space-cleanup  entrypoint.sh  example_docstrings.py  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: dependabot.yml  open-prs.yml  tag.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  question.yml
.github/scripts/: autolabel_issue.py
.github/tests/: test_urls.py
.github/workflows/: ci.yml  cla.yml  claude-dispatcher.yml  example.yml  format.yml  github-report.yml  github_report.yml  merge-main-into-prs.yml  open-prs.yml  publish.yml  review.yml  ruff.yml  scan-prs.yml  tag.yml  test-retry.yml  test-setup-uv.yml
abc/: cfg.md  ddd.yaml
actions/: __init__.py  check_cla.py  cla.py  cli.py  dependabot.py  dispatch_actions.py  failed_scheduled_actions.py  first_interaction.py  format_code.py  format_python_docstrings.py  github_report.py  pyproject.toml  review_pr.py  scan_prs.py  summarize_pr.py  summarize_release.py  trigger_action.py  trigger_actions.py  update_file_headers.py  update_markdown_code_blocks.py
actions/utils/: __init__.py  anthropic_utils.py  common_utils.py  example-failure.py  github_utils.py  openai_utils.py  version_utils.py
cla/: README.md  action.yml
cleanup-disk/: README.md  action.yml
dependabot/: README.md  action.yml
docs/: cfg.md
github-report/: README.md  action.yml
lychee/: out.md
retry/: README.md  action.yaml  action.yml
scan-prs/: README.md  action.yml
setup-uv/: README.md  action.yml
template/: module1.py
tests/: example_docstrings.py  test-dispatch-actions.py  test-first-interaction.py  test-summarize-pr.py  test-summarize-release.py  test_anthropic_utils.py  test_cla.py  test_cli.py  test_cli_commands.py  test_common_utils.py  test_dependabot.py  test_dispatch_actions.py  test_docstring_formatter.py  test_file_headers.py  test_first_interaction.py  test_format_code.py  test_github_report.py  test_github_utils.py  test_headers.py  test_init.py  test_module1.py  test_openai_utils.py  test_summarize_pr.py  test_summarize_release.py  test_update_markdown_codeblocks.py  test_urls.py
utils/: autolabel_issue.py  first_interaction.py  run_pr_summary.py  summarize_pr.py  summarize_release.py  update_markdown_code_blocks.py
